# matrix-admin-bot

./: .gitignore  Dockerfile  README.md  config.local.toml  config.sample.toml  pyproject.toml  tox.ini
.github/workflows/: docker-publish.yml  tests.yml
docs/: CONTRIBUTING.md  matrix_admin_bot.service
matrix_admin_bot/: __init__.py  adminbot.py  bot_handler.py  command.py  command_step.py  command_validator.py  totpbot.py  util.py  validatebot.py  validator.py
matrix_admin_bot/commands/: account_validity.py  deactivate.py  memberships.py  ping.py  reset_password.py  room_details.py  room_state.py  server_notice.py  test.py
matrix_admin_bot/commands/next/: add_email_v2.py  admin_client.py  deactivate_v2.py  lock_v2.py  memberships_v2.py  reactivate_v2.py  remove_email_v2.py  replace_displayname_v2.py  replace_email_v2.py  reset_password_v2.py  room_details_v2.py  room_state_v2.py  server_notice_v2.py  unlock_v2.py  user_v2.py
matrix_admin_bot/steps/: confirm.py  totp.py
matrix_admin_bot/validators/: confirm.py  totp.py
matrix_command_bot/: command.py  commandbot.py  simple_command.py  simple_commands.py  util.py
matrix_command_bot/step/: __init__.py  reaction_steps.py  simple_steps.py
matrix_command_bot/validation/: __init__.py  simple_command.py  steps.py
matrix_command_bot/validation/validators/: confirm.py  totp.py
tchap_admin_bot/: tchapadminbot.py
tests/: __init__.py
tests/commands/: test_reset_password.py
tests/matrix_admin_bot/: test_help.py
tests/matrix_admin_bot/commands/: test_account_validity.py  test_deactivate.py  test_reset_password.py  test_room_details.py  test_room_state.py  test_server_notice.py
tests/matrix_admin_bot/commands/next/: __init__.py  test_add_email_v2.py  test_deactivate_v2.py  test_lock_v2.py  test_reactivate_v2.py  test_remove_email_v2.py  test_replace_displayname_v2.py  test_replace_email_v2.py  test_reset_password_v2.py  test_room_details_v2.py  test_room_state_v2.py  test_server_notice_v2.py  test_unlock_v2.py  test_user_v2.py
tests/matrix_command_bot/: test_command_concurrency.py  test_long_running_command.py  test_roles.py  test_simple_command.py  test_simple_commands.py
tests/matrix_command_bot/validation/: test_coordinator.py
tests/matrix_command_bot/validation/validators/: test_confirm.py  test_totp.py
tests/tchap_admin_bot/: test_get_matrix_id.py  test_get_matrix_ids.py  test_transform_cmd_input.py
